<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- 姓名部分 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- 信息部分 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <!-- 第一组信息 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvNum1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/tvTitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_info_text1"
                android:textSize="14sp"/>
        </LinearLayout>

        <!-- 第二组信息 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/tvNum2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/tvTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_info_text2"
                android:textSize="14sp"/>
        </LinearLayout>

        <!-- 第三组信息 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/tvNum3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/tvTitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_info_text3"
                android:textSize="14sp"/>
        </LinearLayout>

        <!-- 第四组信息 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/tvNum4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/tvTitle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_info_text4"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <!-- 会员服务部分 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp">

        <TextView
            android:id="@+id/tvVipServe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_vipserve_title"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <!-- 会员服务菜单 -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/menu_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"/>

    </LinearLayout>

</LinearLayout>