<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/gray"
    android:padding="10dp"
    tools:context=".Activity_admin_AddItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <!-- 商品名称 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_project_container"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:gravity="left"
            tools:ignore="RtlHardcoded">

            <TextView
                style="@style/tvProjectTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_name" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入内容"
                android:maxLines="5"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                />


        </LinearLayout>

        <!-- 商品图片 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_project_container"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/tvProjectTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_img"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                />

        </LinearLayout>


        <!-- 商品介绍 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_project_container"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
            <TextView
                style="@style/tvProjectTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_introduce"
                />

            <EditText
                android:id="@+id/etIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入内容"
                android:maxLines="5"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                />



        </LinearLayout>
        <!-- 状态栏 -->
        <!-- 状态  -->
        <!--  动态显示添加模块 -->
        <LinearLayout
            android:id="@+id/statusContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- 状态模块将动态添加在此 -->
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/btnAddStatus"
            android:background="@drawable/button_bg_delitem"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="添加状态" />

        <Button
            android:id="@+id/butConfirmAddItem"
            android:background="@drawable/button_bg_additem"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/add_project" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>